Added documentation related to admin account settings (#18)
