# app/Http/Controllers/Api/v1/Admin/AccountSettingsController.php
@@ -7,10 +7,26 @@ use App\Http\Requests\v1\Admin\ChangePasswordRequest;
 use App\Http\Requests\v1\Admin\GeneralSettingsRequest;
 use Illuminate\Support\Facades\DB;
 
+/**
+ * @group Administrator Endpoints
+ *
+ * @subgroup Account Settings
+ * @subgroupDescription The endpoints related to the administrator account.
+ */
 class AccountSettingsController extends Controller
 {
     /**
+     * General Settings
+     *
      * Update the general settings of the admin user.
+     *
+     * @bodyParam first_name string required The first name of the admin user. Example: John
+     * @bodyParam last_name string required The last name of the admin user. Example: Doe
+     * @bodyParam email string required The email of the admin user. Example: johndoe@example.com
+     *
+     * @responseFile status=201 storage/responses/admin/general-settings-success.json
+     *
+     * @authenticated
      *
      * @return \Illuminate\Http\JsonResponse
      */
@@ -37,7 +53,18 @@ class AccountSettingsController extends Controller
     }
 
     /**
-     * Change the admin user's password.
+     * Change Password
+     *
+     * Update the password of the currently authenticated admin user.
+     * It will be updated only when the current password is matched.
+     *
+     * @bodyParam current_password string required The admin user's current password. Example: Pa$$w0rd
+     * @bodyParam new_password string required The new password. Example: Secret
+     * @bodyParam new_password_confirmation string required Confirm the new password, should match new_password. Example: Secret
+     *
+     * @responseFile status=201 storage/responses/admin/change-password-success.json
+     *
+     * @authenticated
      *
      * @return \Illuminate\Http\JsonResponse
      */
